--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <main class="standard">
-        <h1>Main</h1>
+        <h1>Produkte</h1>
         <article id="produkte">
             
         </article>
