--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
+    <video autoplay muted loop id="backvid">
+        <source src="video/relax.mp4" type="video/mp4">
+    </video>
     <div id="full">
         <div id="fullinhalt">
             <h1>Willkommen!</h1>
+            <p>Auf dieser Seite wirst du Online-Shopping so erleben, wie du es noch nie hast.</p>
             <button id="startbutton">Start</button>
         </div>
     </div>
@@ -25,10 +28,6 @@
     <a href="" class="menu">Profil</a>  
     </nav>
     <header class="standard">
-        <!-- <div class="kopf">
-            <video id="video" src="video/river.mp4" muted autoplay loop>
-        </video></div> -->
-
         <div class="kopf" id="headinhalt">
             Lol
         </div>
