--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <video autoplay muted loop id="backvid">
-        <source src="video/relax.mp4" type="video/mp4">
+        <source src="video/relax bw.mp4" type="video/mp4">
     </video>
     <div id="full">
         <div id="fullinhalt">
@@ -23,7 +23,7 @@
 
 
     <nav class="standard">
-    <a href="" class="menu">Start</a>
+    <button id="back" class="menu">Start</button>
     <a href="" class="menu">Warenkorb</a>
     <a href="" class="menu">Profil</a>  
     </nav>
