--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <title>Audiophil</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <video autoplay muted loop id="backvid">
+    <!-- <video autoplay muted loop id="backvid">
         <source src="video/relax bw.mp4" type="video/mp4">
-    </video>
+    </video> -->
     <div id="full">
         <div id="fullinhalt">
             <h1>Willkommen!</h1>
             <p>Auf dieser Seite wirst du Online-Shopping so erleben, wie du es noch nie hast.</p>
+            <p>Wähle zunächst einen der drei verschiedenen Shops aus.</p>
             <button id="startbutton">Start</button>
         </div>
     </div>
@@ -29,12 +32,13 @@
     </nav>
     <header class="standard">
         <div class="kopf" id="headinhalt">
-            Lol
+            <h1>Kahnwald Heilsteine</h1>
         </div>
     </header>
 
     <main class="standard">
-        <h1>Produkte</h1>
+        <h1>Lassen Sie sich natürlich heilen!</h1><hr>
+        <p>Unsere Heilsteine sind mit die besten auf dem Markt. Erleben Sie hier ein einzigartiges Shopping-Erlebnis und lassen Sie sich ganz auf die heilende Ausstrahlung unserer Steine ein.</p>
         <article id="produkte">
             
         </article>
@@ -48,7 +52,7 @@
     </main>
 
     <footer class="standard">
-        <h1>Footer</h1>
+        <p>Danke fürs Teilnehmen!</p>
     </footer>
     
 
