Buttons auf dem Startbildschirm

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <h1>Willkommen!</h1>
             <p>Auf dieser Seite wirst du Online-Shopping so erleben, wie du es noch nie hast.</p>
             <p>Wähle zunächst einen der drei verschiedenen Shops aus.</p>
+            <button class="wahl" id="steine">Heilsteine</button><br>
+            <button class="wahl" id="games">Games</button><br>
+            <button class="wahl" id="fitness">Fitness</button><br>
             <button id="startbutton">Start</button>
         </div>
     </div>
