Back Button geht jetzt

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
 
     <nav class="standard">
-    <button id="back" class="menu">Start</button>
     <a href="" class="menu">Warenkorb</a>
     <a href="" class="menu">Profil</a>  
     </nav>
@@ -43,15 +42,12 @@
     <main class="standard">
         <h1>Lassen Sie sich natürlich heilen!</h1><hr>
         <p>Unsere Heilsteine sind mit die besten auf dem Markt. Erleben Sie hier ein einzigartiges Shopping-Erlebnis und lassen Sie sich ganz auf die heilende Ausstrahlung unserer Steine ein.</p>
+        <button id="back" class="back">Start</button>
         <article id="produkte">
             
         </article>
         <article id="einzelprodukt">
-            <div id="grossbild"></div>
-            <div id="infotext">
-                <h1 id="einzelhead">Test</h1><hr>
-                <section id="beschreibung">Hier kommt die Beschreibung hin</section>
-            </div>
+            
         </article>
     </main>
 
