--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200&display=swap" rel="stylesheet">
     <title>Audiophil</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link id="css" rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="hintergrundfarbe">
     <!-- <video autoplay muted loop id="backvid">
         <source src="video/relax bw.mp4" type="video/mp4">
     </video> -->
