steine bilder fertig, warenkorb button

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     <link id="css" rel="stylesheet" href="css/main.css">
 </head>
 <body class="hintergrundfarbe">
-    <!-- <video autoplay muted loop id="backvid">
-        <source src="video/relax bw.mp4" type="video/mp4">
-    </video> -->
     <div id="full">
         <div id="fullinhalt">
             <h1>Willkommen!</h1>
@@ -30,8 +27,8 @@
 
 
     <nav class="standard">
-    <a href="" class="menu">Warenkorb</a>
-    <a href="" class="menu">Profil</a>  
+    <span class="menu">Warenkorb</span>
+    <span class="menu">Profil</span>  
     </nav>
     <header class="standard">
         <div class="kopf" id="headinhalt">
