--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
     <nav class="standard">
-    <span class="menu">Warenkorb</span>
+    <span id="warenkorb" class="menu">Warenkorb</span>
     <span class="menu">Profil</span>  
     </nav>
     <header class="standard">
