--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans&display=swap" rel="stylesheet">
     <title>Audiophil</title>
     <link id="css" rel="stylesheet" href="css/main.css">
 </head>
@@ -32,15 +33,11 @@
     <span class="menu">Profil</span>  
     </nav>
     <header class="standard">
-        <div class="kopf" id="headinhalt">
-            <h1>Kahnwald Heilsteine</h1>
-        </div>
     </header>
 
     <main class="standard">
-        <h1>Lassen Sie sich natürlich heilen!</h1><hr>
-        <p>Unsere Heilsteine sind mit die besten auf dem Markt. Erleben Sie hier ein einzigartiges Shopping-Erlebnis und lassen Sie sich ganz auf die heilende Ausstrahlung unserer Steine ein.</p>
-        <button id="back" class="back">Start</button>
+        <div id="beschreibungstext"></div>
+        <button id="back" class="back">Zurück</button>
         <article id="produkte">
             
         </article>
