--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>Wähle zunächst einen der drei verschiedenen Shops aus.</p>
             <button class="wahl" id="steine">Heilsteine</button><br>
             <button class="wahl" id="games">Games</button><br>
-            <button class="wahl" id="fitness">Fitness</button><br>
+            <button class="wahl" id="wein">Wein</button><br>
             <button id="startbutton">Start</button>
         </div>
     </div>
