layout und buttons css bla

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
     <title>Audiophil</title>
     <link id="css" rel="stylesheet" href="css/main.css">
 </head>
@@ -19,10 +21,11 @@
         <div id="fullinhalt">
             <h1>Willkommen!</h1>
             <p>Auf dieser Seite wirst du Online-Shopping so erleben, wie du es noch nie hast.</p>
-            <p>Wähle zunächst einen der drei verschiedenen Shops aus.</p>
+            <p>Wähle zunächst einen der drei verschiedenen Shops aus.</p><br><br>
             <button class="wahl" id="steine">Heilsteine</button><br>
             <button class="wahl" id="games">Games</button><br>
-            <button class="wahl" id="wein">Wein</button><br>
+            <button class="wahl" id="wein">Wein</button><br><br>
+            <p>Drücke anschließend auf Start.</p><br>
             <button id="startbutton">Start</button>
         </div>
     </div>
@@ -30,7 +33,6 @@
 
     <nav class="standard">
     <button id="warenkorb" class="menu">Warenkorb</button>
-    <span class="menu">Profil</span>  
     </nav>
     <header class="standard">
     </header>
