--- a/index.html
+++ b/index.html
@@ -17,17 +17,23 @@
     <link id="css" rel="stylesheet" href="css/main.css">
 </head>
 <body class="hintergrundfarbe">
-    <div id="full">
-        <div id="fullinhalt">
+    <div class="full">
+        <div class="fullinhalt">
             <h1>Willkommen!</h1>
-            <p>Auf dieser Seite wirst du Online-Shopping so erleben, wie du es noch nie hast.</p>
-            <p>Wähle zunächst einen der drei verschiedenen Shops aus.</p><br><br>
+            <p>Danke, dass du an meinem Experiment zum Thema "Sounds und Musik in Online-Shops" teilnehmen möchtest. Dieses besteht aus einem Testeinkauf und einer darauf folgenden Befragung.</p>
+            <p><b>Vergewissere dich, dass der Ton an deinem Gerät eingeschaltet ist und du ihn gut hören kannst.</b></p>
+            <p>Für einen besseren Effekt kannst du auch per F11-Taste in den Vollbildmodus wechseln. Lass dir beim Experiment Zeit!</p>
+            <p>Auf der folgenden Seite befindet sich wahlweise ein Online-Shop für spirituelle Heilsteine, Video-Spiele oder Wein. Bitte wähle nun den Shop aus, welcher dir am ehesten zusagt.</p>
+            <br><br>
             <button class="wahl" id="steine">Heilsteine</button><br>
             <button class="wahl" id="games">Games</button><br>
             <button class="wahl" id="wein">Wein</button><br><br>
-            <p>Drücke anschließend auf Start.</p><br>
+            <p>Der Start-Button bringt dich auf den ausgewählten Online-Shop. <b>Bitte lege mindestens 3 Produkte in den Warenkorb und schließe anschließend den Kaufvorgang ab.</b></p><br>
             <button id="startbutton">Start</button>
         </div>
+    </div>
+    <div class="full mobile">
+        <div class="fullinhalt"><h3>Bitte führe dieses Experiment nicht auf deinem mobilen Gerät durch!</h3></div>
     </div>
 
 
