--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="full mobile">
-        <div class="fullinhalt"><h3>Bitte führe dieses Experiment nicht auf deinem mobilen Gerät durch!</h3></div>
+        <div class="fullinhalt"><h3>Bitte führe dieses Experiment nicht auf deinem Smartphone oder Tablet durch!</h3></div>
     </div>
 
 
